# zephyr

./: west.yml
boards/arduino/nano_esp32s3/: Kconfig  Kconfig.nano_esp32s3  board.yml  nano_esp32s3-pinctrl.dtsi  nano_esp32s3_appcpu.dts  nano_esp32s3_appcpu.yaml  nano_esp32s3_procpu.dts  nano_esp32s3_procpu.yaml
boards/xtensa/up_squared_adsp/: CMakeLists.txt
boards/xtensa/up_squared_adsp/bootloader/: CMakeLists.txt  boot_loader.c
cmake/compiler/clang/: compiler_flags.cmake
cmake/linker/ld/: linker_flags.cmake
drivers/sensor/: CMakeLists.txt  Kconfig  sensor_shell.c
drivers/sensor/melexis/: CMakeLists.txt  Kconfig
drivers/sensor/melexis/mlx90614/: CMakeLists.txt  Kconfig  mlx90614.c
drivers/sensor/samesky/: CMakeLists.txt  Kconfig
drivers/sensor/samesky/amt2xx/: CMakeLists.txt  Kconfig  amt2xx.c  amt2xx.h  amt2xx_spi.c
dts/bindings/sensor/: melexis,mlx90614.yaml  samesky,amt2xx.yaml
include/zephyr/drivers/: sensor.h
modules/: Kconfig  Kconfig.intel_adsp
soc/intel/intel_adsp/ace/: power.c
soc/intel/intel_adsp/common/include/: adsp_debug_window.h
soc/xtensa/intel_adsp_common/: CMakeLists.txt  Kconfig
soc/xtensa/intel_adsp_common/include/cavs/: version.h
soc/xtensa/intel_apl_adsp/: CMakeLists.txt  Kconfig.defconfig  soc.h
soc/xtensa/intel_apl_adsp/include/platform/: dai.h  dma.h
subsys/llext/: llext_mem.c
subsys/logging/: log_msg.c
subsys/shell/backends/: shell_adsp_memory_window.c
